<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MSANs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select">Veuillez choisir une direction</string>
    <string name="desc">personImage</string>

    <string-array name="type_array">
        <item>Indoor</item>
        <item>Outdoor</item>        
    </string-array>
    
     <string-array name="status_array">
        <item>Site survey</item>
        <item>Installation</item> 
        <item>Configuration</item>
        <item>Test services</item> 
        <item>Reception</item>
        <item>Migration</item>  
        <item>Clean up</item> 
                   
    </string-array>
    
    
    
     

    <string name="auth">Authentication</string>
    <string name="pseudo">Login</string>
    <string name="mPass">Password</string>
    <string name="valider">Confirm</string>
    <string name="rechrespo">Search site</string>
    <string name="ajoutrespoo">Add site</string>
    <string name="nb1">PS:</string>
    <string name="nb2">Please make a choice</string>
    <string name="Rechpar">Search by:</string>
    <string name="name">Site name</string>
    <string name="SiteID">Site Id</string>
    <string name="type">Type</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="addressIp">IP Address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="nb4">NB: Please enter your login and password</string>
    <string name="nb5">to log in the system</string>
    <string name="Edit">Edit</string>
    <string name="direction">Direction</string>
    <string name="aspbBoards">ASPB Boards</string>
    <string name="vdbmboards">VDBM Boards</string>
    <string name="status">Status</string>
    <string name="vdpm">VDPM Boards</string>
    <string name="aspb">ASPB Boards</string>
    <string name="editstatus">Edit Status</string>
    <string name="Add">Add site</string>

</resources>
