<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bak"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnRechPage"
        style="@style/btnStyleWhiskey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="50dip"
        android:text="@string/rechrespo"
        android:textSize="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/btnAjoutPage"
        style="@style/btnStylePaprika"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:text="@string/ajoutrespoo"
        android:textSize="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/txvNbPage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dip"
        android:text="@string/nb2"
        android:textColor="#990000"
        android:textSize="20sp" />

</LinearLayout>